@@ -11,6 +11,7 @@
  9. New behavior: StockMarket - buy and sell stocks in your shopkeepers!
 10. Prompt now supports showing room domain type.
 11. Hidden exits are now also hidden from gmcp and other mapping protocols unless the player can see them.
+12. New Scriptable triggers: AGE_PROG, FOLLOW_PROG, UNFOLLOW_PROG
 
 # Build 5.11.0.1 Release 10/28/2025
   1. Proxy server reconnects now bypass conn-spam blocks
